--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </font> <p>
  <audio controls> <source src="https://ia800708.us.archive.org/26/items/MsherrY-02_uP_bY_mUSLEm/002-Saba7.mp3" type="audio/ogg"> </audio>
              </p>
-        <img src="https://upload.cc/i4/5HqhT.png" alt="حصل خطاء" height="350" width="300">
+        <img src="https://upload.cc/i4/5HqhT.png height="350" width="300">
         <hr>
         <p class="bodycss"  style="font-family:'Amiri', serif;" onclick='fadeTo()'>
     <font color="#FFFF">اذكار المساء
@@ -33,7 +33,7 @@
 
              </center>
              <center>
-                 <img  src="https://upload.cc/i4/qEXJl.png" alt="حصل خطاء" height="350" width="300">
+                 <img  src="https://upload.cc/i4/qEXJl.png" height="350" width="300">
              </center>
         
         </div>
