--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
 <p class="bodycss"  style="font-family:'Amiri', serif;" onclick='fadeTo()'>
     <font color="#FFFF">اذكار الصباح
 </font> <p>
- <audio controls> <source src="https://ia800708.us.archive.org/26/items/MsherrY-02_uP_bY_mUSLEm/002-Saba7.mp3" type="audio/ogg"> </audio>
-             </p>
+ <audio src="https://ia800708.us.archive.org/26/items/MsherrY-02_uP_bY_mUSLEm/002-Saba7.mp3" controls> </audio>           </p>
         <img src="https://upload.cc/i4/5HqhT.png" height="350" width="300">
         <hr>
         <p class="bodycss"  style="font-family:'Amiri', serif;" onclick='fadeTo()'>
     <font color="#FFFF">اذكار المساء
 </font> <p>
- <audio controls> <source src="https://cdn1.esm3.com//music/4881/esm3.com.65464.mp3" type="audio/ogg">  <audio controls> 
-
+ <audio src="https://cdn1.esm3.com//music/4881/esm3.com.65464.mp3.65464.mp3" controls> </audio>
              </center>
              <center>
                  <img  src="https://upload.cc/i4/qEXJl.png" height="350" width="300">
