--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p class="bodycss"  style="font-family:'Amiri', serif;" onclick='fadeTo()'>
     <font color="#FFFF">اذكار المساء
 </font> <p>
- <audio src="https://cdn1.esm3.com//music/4881/esm3.com.65464.mp3.65464.mp3" controls> </audio>
+ <audio src="https://cdn1.esm3.com//music/4881/esm3.com" controls> </audio>
              </center>
              <center>
                  <img  src="https://upload.cc/i4/qEXJl.png" height="350" width="300">
